# blog

./: .gitignore  pyproject.toml  top_shelf.py
blog/: monads.py
content/: monads_for_mortals.ipynb
notebooks/: FP in Python.ipynb
