[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Stephan Fitzpatrick <knowsuchagency@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2"
hypothesis = "^4.53"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
